tests/baselines/reference/emitArrowFunctionWhenUsingArguments16(alwaysstrict=true,target=es2015).errors.txt
emitArrowFunctionWhenUsingArguments16.ts(2,9): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments16.ts(6,9): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments16.ts (2 errors) ====
    function f() {
        var arguments = "hello";
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        if (Math.random()) {
            return () => arguments[0];
        }
        var arguments = "world";
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }